Archive2/a5/f4b071743687da/output
main.cpp: In instantiation of 'T GenericTS<T, ContainerType, Alloc>::pop_front() [with T = int; ContainerType = std::vector; Alloc = std::allocator<int>]':
main.cpp:1050:20:   required from here
main.cpp:1029:9: error: 'class std::vector<int, std::allocator<int> >' has no member named 'pop_front'
         container.pop_front();
         ^
